--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "trpg-character-sheet",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "http://doughnut-daisuki.github.io",
+  "homepage": "http://doughnut-daisuki.github.io/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
