--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,26 @@
 {
   "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ],
-// コンパイルに関するオプションを設定
   "compilerOptions": {
-// ECMAScript target versionを指定
-    "target": "es5",
-// ビルドする際に含めるlibraryファイル
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-//JSファイルのビルドを可能に
-    "allowJs": true,
-//暗黙のany型をエラーに
-    "noImplicitAny": false,
-//型宣言ファイルの型チェックをスキップする
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
     "skipLibCheck": true,
-// CommonJSモジュールとESモジュール間の相互運用性を,すべてのインポート用に名前空間オブジェクトを作成することで可能に
-    "esModuleInterop": true,
-//エキスポートしないモジュールからのインポートを許可するか（型チェックのみに影響）
-    "allowSyntheticDefaultImports": true,
-//厳密な型チェックオプションを有効に
-    "strict": true,
-//大文字小文字を区別して参照を解決するようにする
-    "forceConsistentCasingInFileNames": true,
-//生成されるモジュールコードを指定
-    "module": "esnext",
-//モジュール解決戦略を指定する: 'node'（Node.js）または 'classic'
-    "moduleResolution": "node",
-//自分で型定義を行う必要なく json ファイルを扱うことを可能に
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
-//各々のファイルを別のモジュールとして変換
     "isolatedModules": true,
     "noEmit": true,
-//tsx拡張子においてJSXサポートを行うか
-    "jsx": "preserve"
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
