--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trpg-character-sheet",
   "version": "0.0.0",
   "type": "module",
-  "homepage": "http://doughnut-daisuki.github.io/doughnut-daisuki.github.io",
+  "homepage": "http://doughnut-daisuki.github.io/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
